BUG#20852: Using update with full table scan causes mysqld to enter an eternal loop